[project]
name = "hashtags-for-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KAYLEE LIU", email = "KAYLEELIU@UCHICAGO.EDU" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "pandas>=3.0.1",
]

[project.scripts]
hashtags-for-change = "hashtags_for_change.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]